[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/gui/menus/select_menu_entry_background.png" type="Texture" id=1]
[ext_resource path="res://src/gui/menus/menu_entry_frame.gd" type="Script" id=2]

[node name="MenuEntryFrame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -436.0
margin_bottom = -226.0
rect_min_size = Vector2( 13, 13 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Corners" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeft" type="ColorRect" parent="Corners"]
margin_left = 1.0
margin_top = 1.0
margin_right = 5.0
margin_bottom = 5.0

[node name="TopRight" type="ColorRect" parent="Corners"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -5.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomLeft" type="ColorRect" parent="Corners"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRight" type="ColorRect" parent="Corners"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -5.0
margin_right = -1.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0

[node name="TextureRect" type="TextureRect" parent="ImageContainer"]
margin_right = 32.0
margin_bottom = 32.0
expand = true

[node name="FlickeringTimer" type="Timer" parent="."]
wait_time = 0.133
[connection signal="timeout" from="FlickeringTimer" to="." method="_on_FlickeringTimer_timeout"]
